--- a/css/d.css
+++ b/css/d.css
@@ -16,6 +16,21 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	}
 /*.d{height:100%;}*/
 
+#m1a{	
+	width:100%;
+	max-width:92%;
+	margin:2%;
+	background-color:red;
+	border-style: solid;
+	border-width: 11px;
+    border-color: grey;
+}
+#fuel{
+	width:100%;	
+	max-width:100%;
+	background-color:#00d000;
+}
+
 .luna{
 	z-index:1;
 	text-align:center;	
@@ -44,3 +59,12 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 
 #hidem,#showm{display:none}
 
+
+/*<div class="a">
+    <div id="showm">show menu</div>
+    <ul id="cpanel">
+	  <li>Fuel <span id="fuel">100</span> l</li>
+	  <li>Altura <span id="altura">70</span> m</li>
+      <li>Velocidad <span id="velocidad">100</span> m/s</li>  
+    </ul>
+  </div>*/
