--- a/css/d.css
+++ b/css/d.css
@@ -14,7 +14,7 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	}*/
 	
 .a{
-	text-align:left;
+	/*text-align:left;*/
 	position:fixed;
 	top:2%;
 	left:2%;
@@ -59,7 +59,7 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 }
 
 #fuel{
-	width:100%;
+	/*width:100%;*/
 	height:100%;
 	max-width:100%;
 	background-color:#00d000;
@@ -80,18 +80,20 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 }*/
 
 .numero{
-	z-index:2;
+	/*z-index:2;*/
 	position:absolute;
-	left:71%;
-	text-align:center;
-	width:18%;
-	height:10%;
+	right:3%;
+	top:16%;
+	/*width:18%;
+	height:10%;*/
 	color:black;
+	text-align:center;
 	font-family: 'Arial';
-	line-height: 2;
+	font-size:2vw;
+	/*line-height: 2;*/
 	background-color:#b0b5c5;
-	padding:5%;
-	margin-top:4%;
+	padding:3%;
+	/*margin-top:4%;*/
 }
 
 #menu{
