--- a/css/d.css
+++ b/css/d.css
@@ -1,35 +1,122 @@
 body,html{height:100%;padding:0px;margin:0px;}
 body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
-
-.a{}
-/*.b{background-color:red;}*/
-
-.c{	
-	display:block !important
-	}
 	
-.a,.b,.c{
-	display:inline-block;
-	width:33.33%;
-	height:100%;
-	float:left;
-	}
-/*.d{height:100%;}*/
+.a{
+	position:fixed;
+	top:2%;
+	left:2%;
+	width:20%;
+	height:30%;
+}
 
-#m1a{	
+.m1a{	
 	width:100%;
 	max-width:92%;
-	margin:2%;
+	margin:5%;
 	background-color:red;
 	border-style: solid;
 	border-width: 11px;
     border-color: grey;
 }
+.m1b img{width:100%}
+
+.m1b{
+	position:relative;	
+	width:100%;
+	max-width:100%;
+	margin:5%;
+
+}
+
 #fuel{
-	width:100%;	
+	height:100%;
 	max-width:100%;
 	background-color:#00d000;
 }
+
+
+.numero{
+	position:absolute;
+	right:3%;
+	top:16%;
+	color:black;
+	text-align:center;
+	font-family: 'Arial';
+	font-size:2vw;
+	background-color:#b0b5c5;
+	padding:3%;
+}
+	
+.c{	
+	text-align:right;
+	display:block;
+	position:fixed;
+	top:2%;
+	right:2%;
+	width:25%;
+}
+
+.botonC:hover {background-color: #0043E1;}
+
+.botonC {
+	display:inline-block;
+	width:40%;
+	padding:2%;
+}
+
+.botonC img{width:100%;}
+
+.menu{
+	z-index:4;
+	text-align:center;
+	position:fixed;
+	top:33%;
+	left:25%;
+	width:50%;
+	height:40%;
+	background-color:yellow;
+	border-style: solid;
+	border-width: 12px;
+    border-color: grey;
+	display:none;
+}
+
+.botonMenu:hover {background-color: #0043E1;}
+#hidem:hover {background-color: #0043E1;}
+
+.botonMenu, #hidem {
+	position:relative;
+	height:25%;
+	padding:2%;
+}
+
+.menu img {
+	max-width:100%;
+	max-height:100%;
+	height:100%;
+}
+
+/*.botonMenu {
+	text-align:center;
+	position:absolute;
+	display:block;
+	padding:2%;
+	height:20%
+}
+
+#m2a{
+	top:0%;
+}
+#m2b{
+	top:25%;
+}
+#m2c{
+	top:50%;
+}
+#m2d{
+	top:75%;
+}*/
+
 
 .luna{
 	z-index:1;
@@ -41,8 +128,6 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	}
 	
 .luna img{height:100%;}
-
-/*#nave{z-index:2;background:url(../img/314x158spriteNave1.png) 0 0;position:fixed;top:5%;left:42%;width:157px;height:158px;}*/
 
 #nave{
 	z-index:2;
@@ -57,7 +142,9 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 
 #cpanel{}
 
-#hidem,#showm{display:none}
+/*#hidem,#showm{float:right}
+
+#hidem,#showm{display:none}*/
 
 
 /*<div class="a">
