--- a/css/m.css
+++ b/css/m.css
@@ -1,71 +1,95 @@
 body,html{height:100%;padding:0px;margin:0px;}
 body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
-
-.a{	
-	width:100%;
-	height:90px;
-	overflow:hidden;
+	
+.a{
+	text-align:left;
 	position:fixed;
-	top:0px
-	}
+	top:5%;
+	left:2%;
+	width:25%;
+	height:35%;
+}
 	
-.b{
-	width:100%;
-	height:100%;
-	overflow:hidden;
-	}
+.c{
 	
-.c{	
+	text-align:right;
 	position:fixed;
-	top:0px;
-	bottom:0px;
-	left:0px;
-	right:0px;
-	display:none;
-	z-index:1
-	}
+	top:5%;
+	right:5%;
+	width:18%;
+}
 	
-#m1a{	
+.m1a{	
 	width:100%;
 	max-width:92%;
-	margin:2%;
+	margin:5%;
 	background-color:red;
 	border-style: solid;
 	border-width: 11px;
     border-color: grey;
 }
+.m1b img{width:100%}
+
+.m1b{
+	position:relative;	
+	width:100%;
+	max-width:100%;
+	margin:5%;
+
+}
+
 #fuel{
-	width:100%;	
+	height:100%;
 	max-width:100%;
 	background-color:#00d000;
 }
-	
+
+
+.numero{
+	position:absolute;
+	right:3%;
+	top:16%;
+	color:black;
+	text-align:center;
+	font-family: 'Arial';
+	font-size:2vw;
+	background-color:#b0b5c5;
+	padding:3%;
+}
+
+#menu{
+	z-index:3;
+	text-align:left;
+	position:fixed;
+	top:33%;
+	left:25%;
+	width:50%;
+	height:40%;
+	background-color:yellow;
+	border-style: solid;
+	border-width: 12px;
+    border-color: grey;
+	display:none;
+}
+
+
 .luna{
 	z-index:1;
-	text-align:center;
+	text-align:center;	
+	height:17%;
+	width:100%;
 	position:fixed;
 	bottom:0px;
-	height:16%;
-	width:100%;
 	}
 	
 .luna img{height:100%;}
 
-/*#nave{
-	z-index:2;
-	background:url(../img/180x90spriteNave1.png) 0 0;
-	position:fixed;
-	top:5%;
-	left:36%;
-	width:90px;
-	height:90px;
-	}*/
-	
 #nave{
 	z-index:2;
 	text-align:center;
 	position:fixed;
-	top:5%;width:100%;
+	top:5%;
+	width:100%;
 	height:20%
 	}
 	
@@ -74,3 +98,15 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 #cpanel{}
 
 #hidem,#showm{float:right}
+
+/*#hidem,#showm{display:none}*/
+
+
+/*<div class="a">
+    <div id="showm">show menu</div>
+    <ul id="cpanel">
+	  <li>Fuel <span id="fuel">100</span> l</li>
+	  <li>Altura <span id="altura">70</span> m</li>
+      <li>Velocidad <span id="velocidad">100</span> m/s</li>  
+    </ul>
+  </div>*/
