--- a/css/d.css
+++ b/css/d.css
@@ -46,6 +46,17 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	background-color:#b0b5c5;
 	padding:3%;
 }
+
+#nave{
+	z-index:2;
+	text-align:center;
+	position:fixed;
+	top:5%;
+	width:100%;
+	height:20%
+	}
+	
+#nave img{height:100%;}
 	
 .c{	
 	text-align:right;
@@ -127,18 +138,11 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	bottom:0px;
 	}
 	
-.luna img{height:100%;}
+.luna img{
+	height:100%;
+}
 
-#nave{
-	z-index:2;
-	text-align:center;
-	position:fixed;
-	top:5%;
-	width:100%;
-	height:20%
-	}
-	
-#nave img{height:100%;}
+
 
 #cpanel{}
 
