--- a/css/m.css
+++ b/css/m.css
@@ -4,28 +4,20 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 .a{
 	text-align:left;
 	position:fixed;
-	top:5%;
+	top:3%;
 	left:2%;
-	width:25%;
+	width:27%;
 	height:35%;
 }
-	
-.c{
-	
-	text-align:right;
-	position:fixed;
-	top:5%;
-	right:5%;
-	width:18%;
-}
-	
+
 .m1a{	
 	width:100%;
 	max-width:92%;
 	margin:5%;
+	margin-bottom:10%;
 	background-color:red;
 	border-style: solid;
-	border-width: 11px;
+	border-width: 5px;
     border-color: grey;
 }
 .m1b img{width:100%}
@@ -42,47 +34,21 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	height:100%;
 	max-width:100%;
 	background-color:#00d000;
+	font-size:2vw; /*barra con menos altura, cambiando el tamaño del espacio*/
 }
 
 
 .numero{
 	position:absolute;
 	right:3%;
-	top:16%;
+	top:15%;
 	color:black;
 	text-align:center;
 	font-family: 'Arial';
-	font-size:2vw;
+	font-size:3vw;
 	background-color:#b0b5c5;
 	padding:3%;
 }
-
-#menu{
-	z-index:3;
-	text-align:left;
-	position:fixed;
-	top:33%;
-	left:25%;
-	width:50%;
-	height:40%;
-	background-color:yellow;
-	border-style: solid;
-	border-width: 12px;
-    border-color: grey;
-	display:none;
-}
-
-
-.luna{
-	z-index:1;
-	text-align:center;	
-	height:17%;
-	width:100%;
-	position:fixed;
-	bottom:0px;
-	}
-	
-.luna img{height:100%;}
 
 #nave{
 	z-index:2;
@@ -90,14 +56,87 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	position:fixed;
 	top:5%;
 	width:100%;
-	height:20%
+	height:17%;  /*nave más pequeña en la versión móvil*/
 	}
 	
-#nave img{height:100%;}
+#nave img{
+	height:100%;
+	margin-left:6%; /*para centrar la nave*/
+}
+	
+.c{
+	
+	/*text-align:right;*/
+	position:fixed;
+	top:3%;
+	right:-25%;
+	width:48%;
+}
+
+.botonC:hover {background-color: #0043E1;}
+
+.botonC {
+	/*display:block; botones uno encima de otro*/
+	width:40%;
+	padding:2%;
+	margin-bottom:10%;
+}
+	
+
+.botonC img{width:100%;}
+
+.menu{
+	z-index:4;
+	text-align:center;
+	position:fixed;
+	top:33%;
+	left:17%;
+	width:60%;
+	height:35%;
+	background-color:yellow;
+	border-style: solid;
+	border-width: 8px;
+    border-color: grey;
+	display:none;
+	padding:2%;
+}
+
+.botonMenu:hover {background-color: #0043E1;}
+#hidem:hover {background-color: #0043E1;}
+
+.botonMenu, #hidem {
+	position:relative;
+	height:21%;
+	padding:2%;
+}
+
+.menu img {
+	max-width:100%;
+	max-height:100%;
+	height:100%;
+}
+
+
+.luna{
+	z-index:1;
+	text-align:center;	
+	height:18%;
+	width:100%;
+	position:fixed;
+	bottom:0px;
+	}
+	
+.luna img{
+	height:100%;
+	width:80%;
+	margin-left:5%;
+}
+
+
 
 #cpanel{}
 
-#hidem,#showm{float:right}
+
 
 /*#hidem,#showm{display:none}*/
 
