--- a/css/m.css
+++ b/css/m.css
@@ -85,7 +85,21 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 
 .botonC img{width:100%;}
 
-.menu{
+#power {
+	text-align:center;
+	position:fixed;
+	bottom:5%;
+	right:1%;
+	width:20%;
+	height:20%;	
+}
+
+#power img{
+	height:100%;
+	max-height:100%;
+}
+
+.menu {
 	z-index:4;
 	text-align:center;
 	position:fixed;
