--- a/css/d.css
+++ b/css/d.css
@@ -1,5 +1,7 @@
 body,html{height:100%;padding:0px;margin:0px;}
 body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
+
+#inicio {}
 	
 .a{
 	position:fixed;
@@ -59,6 +61,7 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 #nave img{height:100%;}
 	
 .c{	
+	z-index:3;
 	text-align:right;
 	display:block;
 	position:fixed;
@@ -120,6 +123,21 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	max-width:100%;
 	max-height:100%;
 	height:100%;
+}
+
+#dificultad {
+	z-index:5;
+	text-align:center;
+	position:fixed;
+	top:40%;
+	left:30%;
+	width:30%;
+	height:40%;
+	background-color:yellow;
+	border-style: solid;
+	border-width: 12px;
+    border-color: grey;
+	display:block;
 }
 
 /*.botonMenu {
