--- a/css/m.css
+++ b/css/m.css
@@ -65,7 +65,7 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 }
 	
 .c{
-	
+	z-index:3;
 	/*text-align:right;*/
 	position:fixed;
 	top:3%;
@@ -129,6 +129,21 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	max-width:100%;
 	max-height:100%;
 	height:100%;
+}
+
+#dificultad {
+	z-index:5;
+	text-align:center;
+	position:fixed;
+	top:40%;
+	left:30%;
+	width:30%;
+	height:40%;
+	background-color:yellow;
+	border-style: solid;
+	border-width: 12px;
+    border-color: grey;
+	display:block;
 }
 
 
