--- a/css/d.css
+++ b/css/d.css
@@ -2,6 +2,15 @@ body,html{height:100%;padding:0px;margin:0px;}
 body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 
 #inicio {}
+
+/*#facil, #dificil{
+	max-width:100%;
+	padding:2%;
+}*/
+
+/*#facil: hover{
+	background-color: #0043E1;
+}*/
 	
 .a{
 	position:fixed;
@@ -80,17 +89,16 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 
 .botonC img{width:100%;}
 
-#power {
+#botonPower {
 	z-index:4;
 	text-align:center;
 	position:fixed;
-	bottom:5%;
-	right:1%;
-	width:20%;
-	height:20%;	
+	bottom:3%;
+	right:3%;
+	width:20%;	
 }
 
-#power img{
+#botonPower img{
 	width:100%;
 	max-width:100%;
 }
@@ -114,8 +122,8 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 #hidem:hover {background-color: #0043E1;}
 
 .botonMenu, #hidem {
-	position:relative;
-	height:25%;
+	position:static;
+	max-width:100%;
 	padding:2%;
 }
 
@@ -129,15 +137,29 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	z-index:5;
 	text-align:center;
 	position:fixed;
-	top:40%;
-	left:30%;
-	width:30%;
-	height:40%;
+	top:35%;
+	left:26%;
+	width:48%;
+	height:25%;
 	background-color:yellow;
 	border-style: solid;
 	border-width: 12px;
     border-color: grey;
 	display:block;
+}
+
+.botonDificultad:hover {
+	background-color: #0043E1;
+}
+
+.botonDificultad {
+	display:inline-block;	
+	padding:2%;
+	max-width:45%;
+}
+
+.botonDificultad img {
+	max-width:100%;
 }
 
 /*.botonMenu {
@@ -175,7 +197,34 @@ body{background:url(../img/cielo.jpeg) no-repeat fixed center;}
 	height:100%;
 }
 
+#final1, #final2 {
+	z-index:5;
+	text-align:center;
+	position:fixed;
+	top:36%;
+	left:28%;
+	width:44%;
+	height:16%;
+	background-color:yellow;
+	border-style: solid;
+	border-width: 12px;
+    border-color: grey;
+	display:none;
+}
 
+.reiniciar {
+	position:absolute;
+	max-width:100%;
+	padding:2%;
+}
+
+.reiniciar img{
+	width:100%;
+}
+
+.reiniciar:hover {
+	background-color: #0043E1;
+}
 
 #cpanel{}
 
